@@ -14,11 +14,16 @@ import java.util.List;
 public class CorsConfig {
 
     @Bean
-    CorsWebFilter corsWebFilter(@Value("${cors.allowed-origins}") String origins) {
+    CorsWebFilter corsWebFilter(@Value("${cors.allowed-origins:}") String origins) {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
-        config.setAllowedOrigins(List.of(origins.split(",")));
-        config.setAllowedMethods(Arrays.asList("POST", "GET"));
+
+        if (origins == null || origins.isBlank()) {
+            config.setAllowedOrigins(List.of("http://localhost:4200", "http://api-gateway:8080"));
+        } else {
+            config.setAllowedOrigins(List.of(origins.split(",")));
+        }
+        config.setAllowedMethods(Arrays.asList("POST", "GET", "PUT"));
         config.setAllowedHeaders(List.of(CorsConfiguration.ALL));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
